--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "devDependencies": {
         "@types/react": "^16.9.2",
-        "react": "^16.8.0 || ^17.0.0",
+        "react": "^16.8.0",
         "typescript": "^3.6.2"
     },
     "homepage": "https://github.com/springload/react-iframe-click/",
